index.css
:root {
  --body-bg-color: rgb(229, 229, 229);
  --todos-bg-color: rgb(255, 255, 255);
  --input-border-color: rgba(33, 33, 33, 0.32);
  --input-placeholder-color: rgba(33, 33, 33, 0.6);
  --input-text-color: rgba(33, 33, 33, 0.87);
  --checked-text-color: rgba(33, 33, 33, 0.32);
  --btn-remove-bg: rgb(255, 255, 255);
  --remove-icon-color: rgba(33, 33, 33, 0.32);
  --todo-hover-bg-color: rgba(33, 33, 33, 0.08);
  --empty-color: rgb(33, 33, 33);
}

:root > .dark-theme {
  --body-bg-color: rgb(24, 24, 36);
  --todos-bg-color: rgb(37, 39, 60);
  --input-border-color: rgba(255, 255, 255, 0.32);
  --input-placeholder-color: rgba(255, 255, 255, 0.6);
  --input-text-color: rgba(255, 255, 255, 0.87);
  --checked-text-color: rgba(255, 255, 255, 0.32);
  --btn-remove-bg: rgba(255, 255, 255, 0.32);
  --remove-icon-color: rgb(33, 33, 33);
  --todo-hover-bg-color: rgba(255, 255, 255, 0.08);
  --empty-color: rgb(255, 255, 255);
}

@media (prefers-color-scheme: dark) {
  :root {
    --body-bg-color: rgb(24, 24, 36);
    --todos-bg-color: rgb(37, 39, 60);
    --input-border-color: rgba(255, 255, 255, 0.32);
    --input-placeholder-color: rgba(255, 255, 255, 0.6);
    --input-text-color: rgba(255, 255, 255, 0.87);
    --checked-text-color: rgba(255, 255, 255, 0.32);
    --btn-remove-bg: rgba(255, 255, 255, 0.32);
    --remove-icon-color: rgb(33, 33, 33);
    --todo-hover-bg-color: rgba(255, 255, 255, 0.08);
    --empty-color: rgb(255, 255, 255);
  }

  :root > .light-theme {
    --body-bg-color: rgb(229, 229, 229);
    --todos-bg-color: rgb(255, 255, 255);
    --input-border-color: rgba(33, 33, 33, 0.32);
    --input-placeholder-color: rgba(33, 33, 33, 0.6);
    --input-text-color: rgba(33, 33, 33, 0.87);
    --checked-text-color: rgba(33, 33, 33, 0.32);
    --btn-remove-bg: rgb(255, 255, 255);
    --remove-icon-color: rgba(33, 33, 33, 0.32);
    --todo-hover-bg-color: rgba(33, 33, 33, 0.08);
    --empty-color: rgb(33, 33, 33);
  }
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  transition: background-color 0.2s ease;
}

html {
  font-size: 62.5%;
  overflow-x: hidden;
}

body {
  font-family: "Kanit", serif;
  min-height: 100vh;
  background-color: var(--body-bg-color);
  display: flex;
  flex-direction: column;
  position: relative;
}

.background {
  background-image: url(./background.png);
  height: 29vh;
  background-position: center;
  background-size: cover;
}

.main {
  align-self: center;
  max-width: 61.8rem;
  width: 100%;
  position: absolute;
  top: 6.5vh;
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.heading-primary {
  font-size: 4.8rem;
  font-weight: 500;
  letter-spacing: 0.12px;
  color: #fff;
}

.btn {
  cursor: pointer;
  background: none;
  border: none;
}

.btn--theme-toggle {
  display: grid;
  place-items: center;
  line-height: 1;
}

.theme-icon {
  width: 4rem;
  height: 4rem;
  grid-column: 1 / 1;
  grid-row: 1 / 1;
  color: #fff;
  transition: transform 0.5s ease-out;
}

.theme-icon--sun {
  transform: scale(0);
}

.dark-theme .theme-icon--sun {
  transform: scale(1) rotate(360deg);
}

.theme-icon--moon {
  transform: scale(1);
}

.dark-theme .theme-icon--moon {
  transform: scale(0) rotate(360deg);
}

@media (prefers-color-scheme: dark) {
  .theme-icon--sun {
    transform: scale(1);
  }

  .light-theme .theme-icon--sun {
    transform: scale(0) rotate(360deg);
  }

  .theme-icon--moon {
    transform: scale(0);
  }

  .light-theme .theme-icon--moon {
    transform: scale(1) rotate(360deg);
  }
}

.section-todos {
  margin-top: 1.6rem;
  background-color: var(--todos-bg-color);
  border-radius: 0.8rem;
  height: 78vh;
}

.form--todo {
  box-shadow: 0 0.4rem 0.8rem 0 rgba(0, 0, 0, 0.25);
  display: flex;
  align-items: center;
  position: relative;
}

#input--todo {
  background: none;
  outline: none;
  flex: 1 1 auto;
  padding: 0.8rem 1.2rem;
  margin: 1.2rem 2rem;
  border-radius: 999px;
  border: solid 1px var(--input-border-color);

  font-size: 1.6rem;
  font-family: inherit;
  color: var(--input-text-color);
}

#input--todo:focus {
  outline: solid 1px #93a9ff;
  border: solid 1px #93a9ff;
}

#input--todo::placeholder {
  color: var(--input-placeholder-color);
}

.btn--add-todo {
  flex-grow: 0;
  padding: 0.8rem 2.4rem;
  border-radius: 999px;
  background-color: #93a9ff;
  position: absolute;
  font-family: inherit;
  font-size: 1.6rem;
  color: rgba(255, 255, 255, 0.87);
  right: 2rem;
  display: none;
}

#input--todo:valid + .btn--add-todo {
  display: block;
}

.empty-todos__img {
  display: block;
  margin: 9.6rem auto 0 auto;
}

.empty-todos__img path {
  fill: var(--empty-color) !important;
}

.empty-todos__text--primary {
  margin-top: 2.4rem;
  text-align: center;
  font-size: 2.4rem;
  letter-spacing: 0.06px;
  color: var(--empty-color);
}

.empty-todos__text--secondary {
  display: block;
  margin-top: 0.8rem;
  text-align: center;
  font-size: 1.8rem;
  letter-spacing: 0.05px;
}

.todos {
  padding: 2.4rem 2rem;
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
  height: 64.2vh;
  overflow: auto;
}

.todo {
  list-style: none;
  border: solid 1px var(--input-border-color);
  border-radius: 0.8rem;
  padding: 1.2rem;
  display: flex;
  align-items: center;
  gap: 0.6rem;
  position: relative;
}

.todo:hover {
  background-color: var(--todo-hover-bg-color);
}

#todo__completed {
  width: 16px;
  height: 16px;
  border: solid 1px var(--input-border-color);
  background-color: var(--todos-bg-color);
}

#todo__completed:checked + .todo__text {
  text-decoration: line-through;
  color: var(--checked-text-color);
}

.todo__text {
  color: var(--input-text-color);
  font-size: 1.8rem;
  letter-spacing: 0.05px;
}

.btn--remove-todo {
  position: absolute;
  right: 1.2rem;
  width: 3rem;
  height: 3rem;
  background-color: var(--btn-remove-bg);
  border-radius: 50%;
  display: none;
}

.todo:hover .btn--remove-todo {
  display: flex;
  align-items: center;
  justify-content: center;
}

.remove-icon {
  width: 2.4rem;
  height: 2.4rem;
}

.remove-icon path {
  fill: var(--remove-icon-color);
}

.todos__count {
  text-align: end;
  font-size: 1.7rem;
  font-weight: 300;
  color: var(--input-text-color);
  padding: 2.4rem 2rem;
}

